[gd_scene load_steps=15 format=3 uid="uid://csnslybbe8mh3"]

[ext_resource type="Texture2D" uid="uid://cw3qh2fc6koyt" path="res://Assets/Textures/Map/small_moon_hex_grid.png" id="1_a8uhb"]
[ext_resource type="Script" path="res://Scripts/Cursor/cursor.gd" id="2_7jge4"]
[ext_resource type="PackedScene" uid="uid://da6eod8vqmgf" path="res://Scenes/Controller/controller.tscn" id="2_7mgws"]
[ext_resource type="Script" path="res://Scripts/MapManagement/map.gd" id="2_70uoi"]
[ext_resource type="Script" path="res://Scripts/MapManagement/hex_manager.gd" id="2_ayagu"]
[ext_resource type="Script" path="res://Scripts/TerrainGeneration/terrain_generator.gd" id="2_bv1mf"]
[ext_resource type="Script" path="res://Scripts/TerrainGeneration/noise_generator.gd" id="3_13gjd"]
[ext_resource type="Texture2D" uid="uid://cj1jdl1hgyoqq" path="res://icon.svg" id="3_g3hla"]
[ext_resource type="Script" path="res://Scripts/TerrainGeneration/tile_mapper.gd" id="4_ct8mt"]
[ext_resource type="Script" path="res://Scripts/SaverLoader/saver_loader.gd" id="4_k0p6x"]
[ext_resource type="Script" path="res://Scripts/MapManagement/unit_manager.gd" id="8_mc1s3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5sem"]
size = Vector2(16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ugcyl"]
texture = ExtResource("1_a8uhb")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_3hyxp"]
tile_shape = 3
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_ugcyl")

[node name="Main" type="Node2D"]

[node name="WorldRoot" type="Node2D" parent="."]

[node name="Controller" parent="WorldRoot" instance=ExtResource("2_7mgws")]

[node name="Cursor" type="Node2D" parent="WorldRoot"]
visible = false
script = ExtResource("2_7jge4")

[node name="Sprite2D" type="Sprite2D" parent="WorldRoot/Cursor"]
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_g3hla")

[node name="ObjectSelector" type="Node2D" parent="WorldRoot/Cursor"]

[node name="Area2D" type="Area2D" parent="WorldRoot/Cursor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldRoot/Cursor/Area2D"]
shape = SubResource("RectangleShape2D_p5sem")

[node name="Map" type="Node2D" parent="WorldRoot"]
script = ExtResource("2_70uoi")

[node name="HexManager" type="Node" parent="WorldRoot/Map"]
script = ExtResource("2_ayagu")

[node name="TileMap" type="TileMap" parent="WorldRoot/Map/HexManager"]
z_index = -1
tile_set = SubResource("TileSet_3hyxp")
format = 2
layer_0/name = "Terrain"

[node name="TerrainGenerator" type="Node" parent="WorldRoot/Map/HexManager"]
script = ExtResource("2_bv1mf")

[node name="NoiseGenerator" type="Node" parent="WorldRoot/Map/HexManager/TerrainGenerator"]
script = ExtResource("3_13gjd")

[node name="TileMapper" type="Node" parent="WorldRoot/Map/HexManager/TerrainGenerator"]
script = ExtResource("4_ct8mt")

[node name="Sprite2D" type="Sprite2D" parent="WorldRoot/Map/HexManager/TerrainGenerator"]
visible = false

[node name="UnitManager" type="Node" parent="WorldRoot/Map"]
script = ExtResource("8_mc1s3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 41.0

[node name="EndTurnButton" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 1685.0
offset_top = 985.0
offset_right = 1763.0
offset_bottom = 1016.0
scale = Vector2(3, 3)
text = "End Turn"

[node name="SaveButton" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 400.0
offset_top = 985.0
offset_right = 494.0
offset_bottom = 1016.0
scale = Vector2(3, 3)
text = "Save Game"

[node name="LoadButton" type="Button" parent="UI/Control"]
layout_mode = 0
offset_left = 860.0
offset_top = 985.0
offset_right = 956.0
offset_bottom = 1016.0
scale = Vector2(3, 3)
text = "Load Game"

[node name="Utilities" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utilities"]
script = ExtResource("4_k0p6x")

[connection signal="noise_ready" from="WorldRoot/Map/HexManager/TerrainGenerator/NoiseGenerator" to="WorldRoot/Map/HexManager/TerrainGenerator/TileMapper" method="_on_noise_generator_noise_ready"]
[connection signal="signal_sudoku" from="WorldRoot/Map/HexManager/TerrainGenerator/TileMapper" to="WorldRoot/Map/HexManager/TerrainGenerator" method="_on_tile_mapper_signal_sudoku"]
[connection signal="tile_list_ready" from="WorldRoot/Map/HexManager/TerrainGenerator/TileMapper" to="WorldRoot/Map/HexManager" method="_on_tile_mapper_tile_list_ready"]
[connection signal="pressed" from="UI/Control/EndTurnButton" to="WorldRoot/Map" method="_on_end_turn_button_pressed"]
